Added a method to Config to get a boolean from a cfg
Returns true if the value, ignoring case sensitivity, is equal to
"true".

--- a/config.cfg
+++ b/config.cfg
@@ -2,5 +2,5 @@ LOGIN.PORT=44453
 PING.PORT=44462
 ZONE.PORT=44463
 RequiredVersion=20111130-15:46
-AutoRegistration=1
+AutoRegistration=true
 LoginType=0
