Fixed some stuff

--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 	<classpathentry kind="lib" path="lib/MINA/mina-statemachine-2.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/MINA/mina-transport-apr-2.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/toxiclibscore.jar"/>
+	<classpathentry kind="lib" path="lib/fst-2.10-onejar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
