--- a/config.cfg
+++ b/config.cfg
@@ -4,3 +4,6 @@ ZONE.PORT=44463
 RequiredVersion=20111130-15:46
 AutoRegistration=true
 LoginType=0
+MaxCharacters=2
+ServerIP=127.0.0.1
+GalaxyName="OpeNGE TestCenter"
